# openspec_fullauto

./: AI_workflow.md  AI_workflow_data_structures.md  backend_api.json
opensepc_docs/openspec/: README.md
openspec/: .gitignore  CHANGE_START_CHECKLIST.md  README.md  config.yaml  project.md
openspec/auto/: auto_apply.sh  auto_apply_old.sh  dependency-graph-format.md  managed_git_tasks.py
openspec/changes/admin-audit-part1-step-05-user-read-guard-hardening/: design.md  proposal.md  tasks.md
openspec/changes/admin-audit-part1-step-06-user-governance-state-machine-hardening/: design.md  proposal.md  tasks.md
openspec/docs/: auto-apply-workflow.md  change-series-management-rules.md  git-commit-guidelines.md
openspec_autosteer/: README.md
openspec_autosteer/feed/: feed-20260328-example.json
openspec_autosteer/registry/: agent_list.json  runner_list.json
openspec_autosteer/runtime/: agent_scores.json  change_index.json  proposals.json  run_state.json
openspec_py/: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
openspec_py/src/openspec_py/: __init__.py  __main__.py  cli.py  dashboard.py  finalize_view.py  finalizer.py  git_ops.py  git_tasks.py  launch_execution.py  launch_view.py  launcher.py  legacy_results.py  legacy_session_state.py  merge_queue.py  merge_view.py  models.py  openspec_cli.py  orchestrate_view.py  orchestrator.py  parsers.py  plan_view.py  planner.py  preflight.py  preparation.py  prepare_view.py  run_view.py  run_workflow.py  runtime_logging.py  scanner.py  scope.py  session_store.py  snapshot.py  workspace.py
(+379 files in other folders)
