[project]
name = "openspec-py"
version = "0.1.0"
description = "Python-based OpenSpec workflow tooling and terminal dashboard."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "rich>=13.9.0",
]

[project.scripts]
openspec-auto = "openspec_py.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openspec_py"]
